features - added final video

--- a/prova2.2/Interfaces/RedeSocial2/livbook/.vscode/launch.json
+++ b/prova2.2/Interfaces/RedeSocial2/livbook/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "Main",
+            "projectName": "livbook_4fb8d78e"
+        },
+        {
+            "type": "java",
             "name": "Current File",
             "request": "launch",
             "mainClass": "${file}"
